# sso-launcher-rs

./: Cargo.toml  README.md
src/: api.rs  download.rs  endpoints.rs  launch.rs  main.rs  status.rs  update.rs  utils.rs
