[package]
name = "sso-laucnher-rs"
description = "Less bloated horsegame launcher"
authors = ["varsity", "realindrit"]
version = "1.0.1"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
json = "0.12.4"
clap = { version = "4.5.4", features = ["derive"] }

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"
