[package]
name = "sso-launcher-rs"
description = "Less bloat Star Stable Online Launcher (Fuck electron bloatware)"
authors = ["varsity", "realindrit"]
version = "1.0.2"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
json = "0.12.4"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
colored = "2.0"
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
dirs = "5.0.1"

[profile.release]
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"
